--- a/runningMPI_in_Colab.ipynb
+++ b/runningMPI_in_Colab.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "runningMPI-in-Colab.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +31,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "wT_CNHAL8KG_",
-        "outputId": "dfb2f724-434c-45e2-af4c-42440cdd0e6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dfb2f724-434c-45e2-af4c-42440cdd0e6f"
       },
       "outputs": [
         {
@@ -68,12 +67,25 @@
         "#include <unistd.h>\n",
         "#include <stdlib.h>\n",
         "\n",
+        "int buscaVetor (int VET_TAM, int *v, int elem){\n",
+        "\tint i;\n",
+        "\tfor (i=0; i<VET_TAM; i++)\n",
+        "\t\tif (elem == v[i])\n",
+        "\t\t\treturn i;\n",
+        "\treturn -1;\n",
+        "}\n",
+        "\n",
         "#define MAXSIZE 1000\n",
+        "#define VET_TAM 65.536\n",
+        "\n",
         "int main(int argc, char **argv)\n",
         "{\n",
+        "\tint *vetor;\n",
+        "\tvetor = malloc (VET_TAM * sizeof(int));\n",
         "\tint myid, numprocs;\n",
         "\tint data[MAXSIZE], i, x, low, high, myresult=0, result=0;\n",
         "\tFILE *fp;\n",
+        "\n",
         "\tMPI_Init(&argc,&argv);\n",
         "\tMPI_Comm_size(MPI_COMM_WORLD,&numprocs);\n",
         "\tMPI_Comm_rank(MPI_COMM_WORLD,&myid);\n",
@@ -84,6 +96,7 @@
         "\t\t}\n",
         "\t\tfor(i = 0; i < MAXSIZE; i++) fscanf(fp,\"%d\\n\", &data[i]);\n",
         "\t}\n",
+        "\n",
         "\tMPI_Bcast(data, MAXSIZE, MPI_INT, 0, MPI_COMM_WORLD); /* broadcast data */\n",
         "\tx = MAXSIZE/numprocs; /* Add my portion Of data */\n",
         "\tlow = myid * x;\n",
@@ -92,28 +105,31 @@
         "\t\tmyresult += data[i];\n",
         "\tchar hostname[30];\n",
         "\tgethostname(hostname, 30);\n",
+        "\n",
         "\tprintf(\"I got %d from %d - %s\\n\", myresult, myid, hostname); /* Compute global sum */\n",
         "\tMPI_Reduce(&myresult, &result, 1, MPI_INT, MPI_SUM, 0, MPI_COMM_WORLD);\n",
         "\tif (myid == 0) printf(\"The sum is %d.\\n\", result);\n",
+        "\n",
         "\tMPI_Finalize();\n",
+        "\tfree (vetor);\n",
         "\treturn 0;\n",
         "}\n",
         "\n"
       ],
       "metadata": {
         "id": "IjyITTZb8X4b",
-        "outputId": "5cbbadf2-0514-4d57-c418-3b8d592d2a1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dac3f7f2-e380-44ff-91de-bed2e52f6600"
       },
-      "execution_count": 2,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing teste-mpi.c\n"
+            "Overwriting teste-mpi.c\n"
           ]
         }
       ]
@@ -126,29 +142,32 @@
       "metadata": {
         "id": "e2YZ_O_e8y9s"
       },
-      "execution_count": 3,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!mpirun --localhost --allow-run-as-root -n 4 ./teste-mpi"
+        "! mpirun -n 4 -H  localhost,localhost,localhost,localhost --allow-run-as-root ./teste-mpi"
       ],
       "metadata": {
-        "id": "2bGIuJ1q85NZ",
-        "outputId": "8433d1cc-ed37-46c5-9314-3633c5a9ee59",
+        "id": "5uhhc2F0kD2Y",
+        "outputId": "13dea7ca-cdcc-4f92-8d87-8bab402e7c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mpirun: Error: unknown option \"--localhost\"\n",
-            "Type 'mpirun --help' for usage.\n"
+            "I got 11921 from 0 - f38c678bac29\n",
+            "I got 11968 from 2 - f38c678bac29\n",
+            "I got 11689 from 3 - f38c678bac29\n",
+            "I got 12677 from 1 - f38c678bac29\n",
+            "The sum is 48255.\n"
           ]
         }
       ]
